Update index.html - sound path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="text-box" contenteditable="true"></div>
     <i class="fa fa-microphone"></i>
   </div>
-  <audio src="" class="sound"></audio>
+  <audio src="./sound/notify.mp3" class="sound"></audio>
   <script src="index.js"></script>
 </body>
 
